# routes/loginRoute.js
@@ -6,6 +6,8 @@ let ctrl = new LoginController()
 const Router = express.Router();
 
 Router.post('/', (req, res) => {
+    // #swagger.tags = ['Login']
+    // #swagger.summary = 'Valida credenciais de login'
     ctrl.validar(req, res);
 })
 
